[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/pi.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/blocks.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/bg.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/door.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/img/button.png" type="Texture" id=5]
[ext_resource path="res://scripts/Fase4.gd" type="Script" id=6]
[ext_resource path="res://assets/img/block.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 11.3964, 7.40527 )

[sub_resource type="Animation" id=4]
resource_name = "active"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("button/Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.517647, 0.0392157, 0.0392157, 1 ), Color( 1, 1, 1, 1 ), Color( 0.517647, 0.0392157, 0.0392157, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "showblocks"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("chaoinvisivel/chao1:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("chaoinvisivel/chao1/StaticBody2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("chaoinvisivel/chao2:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("chaoinvisivel/chao2/StaticBody2D/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("chaoinvisivel/chao3:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("chaoinvisivel/chao3/StaticBody2D/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("button/Sprite:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.529412, 0.0509804, 0.0509804, 1 ), Color( 1, 1, 1, 1 ), Color( 0.529412, 0.0509804, 0.0509804, 1 ), Color( 0.992157, 0.988235, 0.988235, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 11.9265, 11.6938 )

[node name="Fase4" type="Node2D"]
position = Vector2( 0.148651, 0 )
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="real_blocks" parent="." instance=ExtResource( 2 )]
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 24, 0, 0, 25, 0, 0, 26, 0, 0, 27, 0, 0, 28, 0, 0, 29, 0, 0, 30, 0, 0, 31, 0, 0, 32, 0, 0, 33, 0, 0, 34, 0, 0, 35, 0, 0, 36, 0, 0, 37, 0, 0, 38, 0, 0, 39, 0, 0, 40, 0, 0, 41, 0, 0, 42, 0, 0, 43, 0, 0, 65536, 0, 0, 65579, 0, 0, 131072, 0, 0, 131115, 0, 0, 196608, 0, 0, 196651, 0, 0, 262144, 0, 0, 262187, 0, 0, 327680, 0, 0, 327720, 0, 0, 327721, 0, 0, 327722, 0, 0, 393216, 0, 0, 393249, 0, 0, 393250, 0, 0, 393251, 0, 0, 393252, 0, 0, 393253, 0, 0, 393254, 0, 0, 393255, 0, 0, 393256, 0, 0, 393257, 0, 0, 393258, 0, 0, 458752, 0, 0, 458789, 0, 0, 458794, 0, 0, 524288, 0, 0, 524314, 0, 0, 524315, 0, 0, 524316, 0, 0, 524317, 0, 0, 524318, 0, 0, 524325, 0, 0, 524330, 0, 0, 589824, 0, 0, 589861, 0, 0, 589866, 0, 0, 655360, 0, 0, 655379, 0, 0, 655380, 0, 0, 655381, 0, 0, 655382, 0, 0, 655383, 0, 0, 655397, 0, 0, 655402, 0, 0, 720896, 0, 0, 720933, 0, 0, 720938, 0, 0, 786432, 0, 0, 786469, 0, 0, 786474, 0, 0, 851968, 0, 0, 851979, 0, 0, 851980, 0, 0, 851981, 0, 0, 851982, 0, 0, 851983, 0, 0, 851984, 0, 0, 852010, 0, 0, 917504, 0, 0, 917546, 0, 0, 983040, 0, 0, 983082, 0, 0, 1048576, 0, 0, 1048581, 0, 0, 1048582, 0, 0, 1048583, 0, 0, 1048584, 0, 0, 1048613, 0, 0, 1048618, 0, 0, 1114112, 0, 0, 1114149, 0, 0, 1114154, 0, 0, 1179648, 0, 0, 1179685, 0, 0, 1179690, 0, 0, 1245184, 0, 0, 1245185, 0, 0, 1245186, 0, 0, 1245187, 0, 0, 1245221, 0, 0, 1245226, 0, 0, 1310720, 0, 0, 1310757, 0, 0, 1310762, 0, 0, 1376256, 0, 0, 1376293, 0, 0, 1376298, 0, 0, 1441792, 0, 0, 1441807, 0, 0, 1441829, 0, 0, 1441834, 0, 0, 1507328, 0, 0, 1507343, 0, 0, 1507365, 0, 0, 1507370, 0, 0, 1572864, 0, 0, 1572865, 0, 0, 1572866, 0, 0, 1572867, 0, 0, 1572868, 0, 0, 1572869, 0, 0, 1572870, 0, 0, 1572871, 0, 0, 1572872, 0, 0, 1572873, 0, 0, 1572874, 0, 0, 1572875, 0, 0, 1572876, 0, 0, 1572877, 0, 0, 1572878, 0, 0, 1572879, 0, 0, 1572880, 0, 0, 1572881, 0, 0, 1572882, 0, 0, 1572883, 0, 0, 1572884, 0, 0, 1572885, 0, 0, 1572886, 0, 0, 1572887, 0, 0, 1572888, 0, 0, 1572889, 0, 0, 1572890, 0, 0, 1572891, 0, 0, 1572892, 0, 0, 1572893, 0, 0, 1572894, 0, 0, 1572895, 0, 0, 1572896, 0, 0, 1572897, 0, 0, 1572898, 0, 0, 1572899, 0, 0, 1572900, 0, 0, 1572901, 0, 0, 1572902, 0, 0, 1572903, 0, 0, 1572904, 0, 0, 1572905, 0, 0, 1572906, 0, 0 )

[node name="bg" parent="." instance=ExtResource( 3 )]

[node name="pi" parent="." instance=ExtResource( 1 )]
position = Vector2( 1001.45, 74.2666 )
flip = true

[node name="door" parent="." instance=ExtResource( 4 )]
position = Vector2( 995.883, 543.828 )

[node name="button" type="Area2D" parent="."]
position = Vector2( 348.032, 552.584 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="button"]
modulate = Color( 0.992157, 0.988235, 0.988235, 1 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="button"]
position = Vector2( 0.157501, 0.157532 )
shape = SubResource( 1 )

[node name="anim" type="AnimationPlayer" parent="."]
anims/active = SubResource( 4 )
anims/showblocks = SubResource( 2 )

[node name="chaoinvisivel" type="Node" parent="."]

[node name="chao1" type="Sprite" parent="chaoinvisivel"]
position = Vector2( 468.919, 500.744 )
scale = Vector2( 5.89082, 1 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="StaticBody2D" type="StaticBody2D" parent="chaoinvisivel/chao1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="chaoinvisivel/chao1/StaticBody2D"]
shape = SubResource( 3 )

[node name="chao2" type="Sprite" parent="chaoinvisivel"]
position = Vector2( 666.698, 449.963 )
scale = Vector2( 5.89082, 1 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="StaticBody2D" type="StaticBody2D" parent="chaoinvisivel/chao2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="chaoinvisivel/chao2/StaticBody2D"]
shape = SubResource( 3 )

[node name="chao3" type="Sprite" parent="chaoinvisivel"]
position = Vector2( 841.258, 395.898 )
scale = Vector2( 5.89082, 1 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="StaticBody2D" type="StaticBody2D" parent="chaoinvisivel/chao3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="chaoinvisivel/chao3/StaticBody2D"]
shape = SubResource( 3 )
[connection signal="body_entered" from="button" to="." method="_on_button_body_entered"]
